# viridion-api

./: .env.example  .gitignore  Dockerfile  README.md  WEBSOCKET_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  websocket_test.html
app/: config.py  main.py
app/database/: database.py  schemas.py
app/models/: predictor.py
app/mqtt/: mqtt_handler.py
app/routers/: predictions.py  sensors.py  watering.py
app/services/: prediction_service.py  sensor_service.py  websocket_manager.py
