[project]
name = "viridion-api"
version = "0.1.0"
description = "Smart Garden IoT API with ML predictions"
authors = [
    { name = "Pablo Vides", email = "videspablo4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [   
    # --- Core FastAPI ---
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # --- Database ---
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.30.0",           
    "psycopg2-binary>=2.9.9",    

    # --- MQTT Support ---
    "paho-mqtt>=1.6.1",          #

    # --- Config & Validation ---
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # --- Machine Learning & Data ---
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # --- File uploads or forms ---
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
